<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent">
	<EditText android:layout_alignParentTop="true" android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:id="@+id/emailEditText"
		android:hint="@string/label_email_address"></EditText>
	<EditText android:layout_below="@+id/emailEditText"
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:id="@+id/referenceEditText" android:hint="@string/label_reference"></EditText>
	<EditText android:layout_below="@+id/referenceEditText"
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:id="@+id/tagsEditText" android:hint="@string/label_extra_tags"></EditText>
	<ListView android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:layout_below="@+id/tagsEditText" android:id="@+id/android:list"
		android:layout_above="@+id/relativeLayout1"></ListView>
	<RelativeLayout android:id="@+id/relativeLayout1"
		android:layout_alignParentBottom="true" android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		<Button android:layout_alignParentLeft="true" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:id="@+id/cancelButton"
			android:layout_toRightOf="@+id/cancelButton" android:text="@string/label_cancel" android:onClick="cancelButtonClicked"></Button>
		<Button android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:id="@+id/submitButton" android:layout_alignParentRight="true"
			android:layout_toRightOf="@+id/cancelButton" android:text="@string/label_submit" android:onClick="submitButtonClicked"></Button>
	</RelativeLayout>

</RelativeLayout>
